--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:css": "postcss src/index.css -o src/dist/index.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +45,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
+    "postcss-cli": "^11.0.0",
     "postcss-loader": "^8.1.1",
     "tailwindcss": "^3.4.4",
     "webpack": "^5.92.1"
