--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-macros": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.11",
+    "twin.macro": "^3.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,10 +48,16 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "babel-plugin-styled-components": "^2.1.4",
     "postcss": "^8.4.39",
     "postcss-cli": "^11.0.0",
     "postcss-loader": "^8.1.1",
     "tailwindcss": "^3.4.4",
     "webpack": "^5.92.1"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
