--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    // "jsxImportSource": "twin.macro"
   },
   "include": [
     "src"
-  ]
+,  "tailwind.config.js"  ]
 }
