--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
     "babel-plugin-macros": "^3.1.0",
+    "get-blob-duration": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
