--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^5.56.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
     "babel-plugin-macros": "^3.1.0",
@@ -17,8 +19,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "twin.macro": "^3.4.1",
     "typescript": "^4.9.5",
@@ -51,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.58.0",
     "autoprefixer": "^10.4.19",
     "babel-plugin-styled-components": "^2.1.4",
     "postcss": "^8.4.39",
