feat: 마이페이지 프로필 섹션, 진행중인 노래 섹션 ui 구현

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://43.201.63.123:8080/",
   "eslintConfig": {
     "extends": [
       "react-app",
