--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
     "babel-plugin-macros": "^3.1.0",
+    "file-saver": "^2.0.5",
     "get-blob-duration": "^1.2.0",
+    "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -39,7 +41,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://43.201.63.123:8080/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.58.0",
+    "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.19",
     "babel-plugin-styled-components": "^2.1.4",
     "postcss": "^8.4.39",
