--- a/package.json
+++ b/package.json
@@ -9,37 +9,39 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
     "@types/styled-components": "^5.1.34",
+    "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.7",
     "babel-plugin-macros": "^3.1.0",
     "file-saver": "^2.0.5",
     "get-blob-duration": "^1.2.0",
     "jszip": "^3.10.1",
+    "postcss-import": "^16.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.24.1",
-    "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-typed": "^2.0.12",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "twin.macro": "^3.4.1",
     "typescript": "^4.9.5",
+    "vite": "^5.4.11",
+    "vite-plugin-babel-macros": "^1.0.6",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.0-rc.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:css": "postcss src/index.css -o src/dist/index.css",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite --host",
+    "build": "tsc -b && vite build",
+    "lint": "eslint './src/**/*.{ts,tsx,js,jsx}'",
+    "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js,jsx}'",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -62,13 +64,12 @@
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.58.0",
     "@types/file-saver": "^2.0.7",
+    "@types/node": "^22.9.3",
     "autoprefixer": "^10.4.19",
     "babel-plugin-styled-components": "^2.1.4",
-    "postcss": "^8.4.39",
-    "postcss-cli": "^11.0.0",
-    "postcss-loader": "^8.1.1",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.4",
-    "webpack": "^5.92.1"
+    "vite-plugin-svgr": "^4.3.0"
   },
   "babelMacros": {
     "twin": {
