--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,14 +11,14 @@
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "types": ["vite/client"],
-    "composite": true,
-    "emitDeclarationOnly": true
+    "composite": false,
+    "declaration": false
     // "jsxImportSource": "twin.macro"
   },
-  "include": ["src", "tailwind.config.js", "custom.d.ts"]
+  "include": ["src", "custom.d.ts"]
 }
