--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@emotion/css": "^11.13.5",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@nivo/line": "^0.87.0",
     "@tanstack/react-query": "^5.56.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -32,6 +36,7 @@
     "twin.macro": "^3.4.1",
     "typescript": "^4.9.5",
     "vite": "^5.4.11",
+    "vite-plugin-babel": "^1.2.0",
     "vite-plugin-babel-macros": "^1.0.6",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.0-rc.2"
@@ -73,7 +78,7 @@
   },
   "babelMacros": {
     "twin": {
-      "preset": "styled-components"
+      "preset": "emotion"
     }
   }
 }
